add EF to the application

--- a/web-app/appsettings.json
+++ b/web-app/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=AKASH\\MSSQLSERVER01;Database=RagDB;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
